Add EVent creation endpoint and fix api generator issues
